# MMchk

./: .gitignore  CMakeLists.txt  MMchk.c  MMchk.h  MMoutputsolution.c  MMoutputsolution.h  MMoutputsummary.c  MMoutputsummary.h  MMparams.c  MMparams.h  MMsortfns.c  MMsortfns.h  MMutility.c  MMutility.h  README.md
